syntax = "proto3";

package protobuf;

option go_package = "../protobuf";

message Document {
    int64 id = 0x00000001;
    string content = 0x00000002;
}

message User {
    int64 id = 0x00000001;
    string github = 0x00000003;
}

message ActivityPubObject {
    string context = 0x00000002 [json_name = "@context"];
    string id = 0x00000003;
    string type = 0x00000004;
    string actor = 0x00000005;
    string from = 0x00000006;
    repeated string to = 0x00000007;
    string inReplyTo = 0x00000008;
    string content = 0x00000009;
    string published = 0x0000000A;
}

message ActivityPubActivity {
    string context = 0x00000002 [json_name = "@context"];
    string id = 0x00000003;
    string type = 0x00000004;
    string actor = 0x00000005;
    ActivityPubObject object = 0x00000006;
    string from = 0x00000007;
    repeated string to = 0x00000008;
    string inReplyTo = 0x00000009;
    string content = 0x0000000A;
    string published = 0x0000000B;
}

message ActivityPubPublicKey {
    string id = 0x00000002;
    string owner = 0x00000003;
    string publicKeyPem = 0x00000004;
}

message ActivityPubLink {
    string href = 0x00000002;
    string rel = 0x00000003;
    string type = 0x00000004;
    string template = 0x00000005;
}

message ActivityPubMedia {
    string mediaType = 0x00000002;
    string type = 0x00000003;
    string url = 0x00000004;
    int32 width = 0x00000005;
    int32 height = 0x00000006;
}

message ActivityPubIncomingActivity {
    int64 id = 0x00000001;
    int64 identityId = 0x00000002;
    string uniqueIdentifier = 0x00000003;
    int64 timestamp = 0x00000004;
    string from = 0x00000005;
    string to = 0x00000006;
    string content = 0x00000007;
    string raw = 0x00000008;
}

message ActivityPubOutgoingActivity {
    int64 id = 0x00000001;
    int64 identityId = 0x00000002;
    string uniqueIdentifier = 0x00000003;
    int64 timestamp = 0x00000004;
    string from = 0x00000005;
    string to = 0x00000006;
    string content = 0x00000007;
    string raw = 0x00000008;
}

message ActivityPubFollower {
    int64 id = 0x00000001;
    string handle = 0x00000002;
    string inbox = 0x00000003;
    string subject = 0x00000004;
    string activity = 0x00000005;
    bool accepted = 0x00000006;
}
